--- a/react-base/package.json
+++ b/react-base/package.json
@@ -14,6 +14,8 @@
 		"@headlessui/react": "^2.0.3",
 		"@heroicons/react": "^2.1.3",
 		"@hookform/resolvers": "^3.6.0",
+		"@tanstack/react-query": "^5.66.9",
+		"antd": "^5.24.2",
 		"axios": "^1.7.2",
 		"concurrently": "^8.2.2",
 		"json-server": "^0.17.0",
@@ -21,6 +23,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.5",
+		"react-query": "^3.39.3",
 		"react-router-dom": "^6.23.1",
 		"sass": "^1.77.1",
 		"zod": "^3.23.8"
