--- a/react-base/package.json
+++ b/react-base/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "server": "npx json-server db.json",
-    "dev": "vite",
+    "dev": "concurrently \"vite --port 5173\" \"json-server --watch db.json -m ./node_modules/json-server-auth --port 3000\"",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
