--- a/react-base/package.json
+++ b/react-base/package.json
@@ -14,6 +14,7 @@
 		"@headlessui/react": "^2.0.3",
 		"@heroicons/react": "^2.1.3",
 		"@hookform/resolvers": "^3.6.0",
+		"@tanstack/react-query": "^5.66.9",
 		"axios": "^1.7.2",
 		"concurrently": "^8.2.2",
 		"json-server": "^0.17.0",
