--- a/react-base/package.json
+++ b/react-base/package.json
@@ -14,14 +14,15 @@
 		"@headlessui/react": "^2.0.3",
 		"@heroicons/react": "^2.1.3",
 		"@hookform/resolvers": "^3.6.0",
-		"axios": "^1.7.2",
+		"@tailwindcss/vite": "^4.0.9",
+		"axios": "^1.8.1",
 		"concurrently": "^8.2.2",
 		"json-server": "^0.17.0",
 		"json-server-auth": "^2.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.5",
-		"react-router-dom": "^6.23.1",
+		"react-router-dom": "^6.29.0",
 		"sass": "^1.77.1",
 		"zod": "^3.23.8"
 	},
@@ -35,7 +36,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
 		"postcss": "^8.4.38",
-		"tailwindcss": "^3.4.3",
+		"tailwindcss": "^3.4.17",
 		"vite": "^5.0.8"
 	}
 }
